--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
   <div class="payment-options">
     <div class="payment-option">
-      <img src="https://i.imgur.com/visa.png" alt="Visa">
+      <img src="main/" alt="Visa">
     </div>
 
     <div class="payment-option">
