--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
 
   <div class="payment-options">
     <div class="payment-option">
-      <img src="main/" alt="Visa">
+      <img src="main/download.png" alt="paypal">
     </div>
 
     <div class="payment-option">
-      <img src="https://i.imgur.com/mastercard.png" alt="Mastercard">
+      <img src="main/image/Mastercard-logo.svg.png" alt="Mastercard">
     </div>
 
     <div class="payment-option">
-      <img src="https://i.imgur.com/amex.png" alt="American Express">
+      <img src="main/image/Google_Pay_Logo_(2020).svg.png" alt="American Express">
     </div>
 
     <div class="payment-option">
